--- a/document/main.tex
+++ b/document/main.tex
@@ -231,6 +231,8 @@ queijo.
 
 Agradeço à Lidi por toda a ajuda na busca por entender melhor por que e quem eu sou.
 
+Agradeço à Tia Edna e ao Tio Lu, por sempre se disponibilizarem e fazerem de tudo por mim e pela família.
+
 Agradeço ao meu irmão André e sua esposa Natália, pelo apoio, carinho e todos os momentos, até mesmo os
 difíceis. Vocês são muito importantes para mim.
 
@@ -240,12 +242,15 @@ presente na vida de toda a família.
 Agradeço à Kaum e a Luluzinha, por todos os momentos divertidos, todo esse tempo que pudemos passar juntos
 e todos os ensinamentos passados.
 
+Agradeço à Vó Cida por todo amor, carinho e exemplo de trabalho e determinação.
+
 Agradeço à Vó Bete por todo amor, toda força, todas as séries e todos os açaís. Você é uma companheira para a
 vida, e não sei o que seria sem você.
 
 Agradeço aos meus pais, por todo trabalho e amor incondicional, e por me darem a oportunidade de chegar até
-aqui. Em especial, agradeço à minha mãe por estar sempre ao meu lado, mesmo quando parecemos estar em fusos
-horários diferentes. Você é uma verdadeira amiga e uma mãe incrível.
+aqui. Ao meu pai, pelo exemplo, ensinamentos de vida, determinação, coragem, persistência e criatividade. E em
+especial, agradeço à minha mãe por estar sempre ao meu lado, mesmo quando parecemos estar em fusos horários
+diferentes. Você é uma verdadeira amiga e uma mãe incrível.
 
 Enfim, agradeço a todos que fizeram parte da minha vida (todos mesmo), pois são todos um pedaço da minha
 história e me tornaram a pessoa que eu sou.
