--- a/document/main.tex
+++ b/document/main.tex
@@ -247,6 +247,9 @@ Agradeço à Vó Cida por todo amor, carinho e exemplo de trabalho e determinaç
 Agradeço à Vó Bete por todo amor, toda força, todas as séries e todos os açaís. Você é uma companheira para a
 vida, e não sei o que seria sem você.
 
+Agradeço ao Vô Didim e à Vó Aparecida, por todos os momentos que compartilhamos e todos os valores que fazem
+da nossa família o que ela é. Vocês sempre estarão conosco.
+
 Agradeço aos meus pais, por todo trabalho e amor incondicional, e por me darem a oportunidade de chegar até
 aqui. Ao meu pai, pelo exemplo, ensinamentos de vida, determinação, coragem, persistência e criatividade. E em
 especial, agradeço à minha mãe por estar sempre ao meu lado, mesmo quando parecemos estar em fusos horários
