--- a/document/main.tex
+++ b/document/main.tex
@@ -215,8 +215,9 @@ como professor, como profissional, como pessoa e como amigo. Agradeço a todos o
 guiaram e me trouxeram até aqui. O tempo é o nosso recurso mais valioso, e vocês o usam para mudar as vidas
 das pessoas que tocam.
 
-Agradeço aos amigos que me acompanharam nesse trajetória, em especial ao Alan Hiroyuki, Alan Lopes, Alex, Marlon
-e Rodolpho, por todo conhecimento compartilhado, todo companheirismo e todos os momentos que vivemos juntos.
+Agradeço aos amigos que me acompanharam nessa trajetória, em especial ao Alan Hiroyuki, Alan Lopes, Alex,
+Marlon, Rodolpho e Victor, por todo conhecimento compartilhado, todo companheirismo e todos os momentos que
+vivemos juntos.
 
 Agradeço à minha namorada, Fernanda, pelo amor, compreensão, todas as comidas gostosas e toda ajuda em organizar
 minha cabeça quando tudo parecia perdido.
