Correção banca examinadora

--- a/document/main.tex
+++ b/document/main.tex
@@ -184,6 +184,10 @@ Orientador\\[2.41cm]
 Prof. Rubens Zenko Sakiyama\\
 Membro titular\\[2.41cm]
 
+\rule [0cm]{10cm}{0.1pt}\\
+Matheus Felipe Gremes\\
+Membro titular\\[2.41cm]
+
 \thispagestyle{empty}
 \clearpage
 
